# TestFreeRTOS

./: .gitmodules  .submodules  CMakeLists.txt  README.md
Core/Inc/: FreeRTOSConfig.h  adc_task.h  can_task.h  main.h  ntc_steinhart.h  stm32f4xx_it.h
Core/Src/: adc.c  adc_task.c  can.c  can_task.c  freertos.c  main.c  ntc_steinhart.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_tim_ex.h
